--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="https://js.puter.com/v2/"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/15.0.6/marked.min.js" integrity="sha512-rvRITpPeEKe4hV9M8XntuXX6nuohzqdR5O3W6nhjTLwkrx0ZgBQuaK4fv5DdOWzs2IaXsGt5h0+nyp9pEuoTXg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.9/katex.min.js" integrity="sha512-LQNxIMR5rXv7o+b1l8+N1EZMfhG7iFZ9HhnbJkTp4zjNr5Wvst75AqUeFDxeRUa7l5vEDyUiAip//r+EFLLCyA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.9/contrib/auto-render.min.js" integrity="sha512-iWiuBS5nt6r60fCz26Nd0Zqe0nbk1ZTIQbl3Kv7kYsX+yKMUFHzjaH2+AnM6vp2Xs+gNmaBAVWJjSmuPw76Efg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.9/katex.min.css" integrity="sha512-fHwaWebuwA7NSF5Qg/af4UeDx9XqUpYpOGgubo3yWu+b2IQR4UeQwbb42Ti7gVAjNtVoI/I9TEoYeu9omwcC6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.3/purify.min.js" integrity="sha512-Ll+TuDvrWDNNRnFFIM8dOiw7Go7dsHyxRp4RutiIFW/wm3DgDmCnRZow6AqbXnCbpWu93yM1O34q+4ggzGeXVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
         var require = {
@@ -38,7 +30,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css" integrity="sha512-KXol4x3sVoO+8ZsWPFI/r5KBVB/ssCGB5tsv2nVOKwLg33wTFP3fmnXa47FdSVIshVTgsYk/1734xSk9aFIa4A==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.js" integrity="sha512-Xo0Jh8MsOn72LGV8kU5LsclG7SUzJsWGhXbWcYs2MAmChkQzwiW/yTQwdJ8w6UA9C6EVG18GHb/TrYpYCjyAQw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script type="module" src="js/ai.js"></script>
     <script type="module" src="js/electron.js"></script>
     <script type="module" src="js/ide.js"></script>
     <script type="module" src="js/local_storage.js"></script>
@@ -48,12 +39,12 @@
     <script type="module" src="js/theme.js"></script>
 
     <link type="text/css" rel="stylesheet" href="css/ide.css">
-    <link type="text/css" rel="stylesheet" href="css/semantic.css">
     <link type="text/css" rel="stylesheet" href="css/site.css">
+    <link type="text/css" rel="stylesheet" href="css/chat.css">
 
-    <title>Judge0 IDE</title>
-    <meta name="title" content="Judge0 IDE">
-    <meta name="description" content="Free and open-source online code editor and compiler">
+    <title>CodeAIDE</title>
+    <meta name="title" content="CodeAIDE">
+    <meta name="description" content="The Online AI IDE">
     <meta name="author" content="Judge0 d.o.o.">
     <meta name="keywords" content="online editor, online code editor, online ide, online compiler, online interpreter, run code online, learn programming online,
     online debugger, programming in browser, online code runner, online code execution, debug online, debug C code online, debug C++ code online,
@@ -91,7 +82,7 @@
 
 <body>
     <div id="judge0-site-navigation" class="ui top fixed borderless menu">
-        <a id="judge0-header" href="https://judge0.com" target="_blank" class="header item judge0-default-visible">
+        <a id="judge0-header" href="https://judge0.com" target="_blank" class="header item judge0-minimal-hidden judge0-standalone-hidden judge0-electron-hidden">
             <img id="judge0-logo" src="./images/icon_var2_rounded_512.png">
         </a>
         <div class="ui simple dropdown item">
@@ -100,12 +91,12 @@
             <div class="menu judge0-file-menu">
                 <div id="judge0-open-file-btn" class="item">
                     <span class="description">+O</span>
-                    <span class="text"><i class="file icon"></i>Open File...</span>
+                    <span class="text">Open File...</span>
                     <input type="file" id="open-file-input" style="display: none;">
                 </div>
                 <div id="judge0-save-btn" class="item">
                     <span class="description">+S</span>
-                    <span class="text"><i class="save icon"></i>Save</span>
+                    <span class="text">Save</span>
                 </div>
             </div>
         </div>
@@ -113,15 +104,14 @@
             <span class="text">Help</span>
             <i class="dropdown icon"></i>
             <div class="menu judge0-file-menu">
-                <a href="https://github.com/judge0/ide" class="link text item" target="_blank"><i class="external square alternate icon"></i>GitHub Repository</a>
-                <a href="https://github.com/judge0/ide/tree/master/embed" class="link text item" target="_blank"><i class="external square alternate icon"></i>Embed Guide</a>
-                <a href="https://platform.sulu.sh/apis/judge0" class="link text item" target="_blank"><i class="external square alternate icon"></i>HTTP API Documentation</a>
-                <a href="PRIVACY.md" class="link text item" target="_blank"><i class="external square alternate icon"></i>Privacy Policy</a>
-                <a href="TERMS.md" class="link text item" target="_blank"><i class="external square alternate icon"></i>Terms of Service</a>
+                <a href="PRIVACY.md" class="link text item" target="_blank">Privacy Policy</a>
+                <a href="TERMS.md" class="link text item" target="_blank">Terms of Service</a>
             </div>
         </div>
         <div class="item">
-            <select id="select-language" class="ui search selection dropdown"></select>
+            <div class="ui input">
+                <select id="select-language" class="ui search selection dropdown"></select>
+            </div>
         </div>
         <div class="item">
             <div class="ui left icon transparent input">
@@ -136,25 +126,28 @@
             </div>
         </div>
         <div class="item">
-            <button id="run-btn" class="ui primary labeled icon button" data-content="+↵">
-                <i class="play icon"></i>
-                Run Code
+            <button id="run-btn" class="ui primary labeled icon button" data-content="+↵" data-position="bottom center">
+                <i class="play icon"></i>Run Code
             </button>
+        </div>
+        <div class="item">
+            <div class="ui input">
+                <input type="password" id="openRouter-api-key" placeholder="OpenRouter API Key">
+            </div>
         </div>
         <div class="right menu">
             <div id="judge0-theme-toggle-btn" class="icon link item" data-content="">
                 <i id="judge0-theme-toggle-btn-icon" class="sun icon"></i>
             </div>
-            <div class="item judge0-minimal-hidden judge0-puter-hidden">
-                <button id="judge0-sign-in-btn" class="ui basic button">
-                    <i class="sign-in icon"></i>
-                    Sign in with Puter
-                </button>
-                <button id="judge0-sign-out-btn" class="ui basic button" data-content="Sign out">
-                    <i class="sign-out icon"></i>
-                    <span id="judge0-puter-username">Sign out</span>
-                </button>
-            </div>
+            <a class="icon item judge0-minimal-hidden judge0-electron-hidden" href="https://platform.sulu.sh/apis/judge0" target="_blank" data-content="API Docs">
+                <i class="book icon"></i>
+            </a>
+            <a class="icon item judge0-minimal-hidden judge0-electron-hidden" href="https://github.com/judge0/ide/tree/master/embed" target="_blank" data-content="Embed">
+                <i class="code icon"></i>
+            </a>
+            <a class="icon item judge0-minimal-hidden judge0-electron-hidden" href="https://github.com/wingding12/ide" target="_blank" data-content="GitHub Repository">
+                <i class="github icon"></i>
+            </a>
         </div>
     </div>
 
@@ -177,44 +170,9 @@
         </div>
     </div>
 
-    <div id="judge0-chat-container" class="ui segment">
-        <div class="ui top attached borderless mini menu">
-            <div class="right menu">
-                <div class="fitted item">
-                    <select id="judge0-chat-model-select" class="ui search selection dropdown item">
-                        <option>gpt-4o-mini</option>
-                        <option>gpt-4o</option>
-                        <option>o3-mini</option>
-                        <option>o1-mini</option>
-                        <option>claude-3-5-sonnet</option>
-                        <option>deepseek-chat</option>
-                        <option>deepseek-reasoner</option>
-                        <option>meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo</option>
-                        <option>meta-llama/Meta-Llama-3.1-70B-Instruct-Turbo</option>
-                        <option>meta-llama/Meta-Llama-3.1-405B-Instruct-Turbo</option>
-                        <option>mistral-large-latest</option>
-                        <option>pixtral-large-latest</option>
-                        <option>codestral-latest</option>
-                        <option>google/gemma-2-27b-it</option>
-                        <option>grok-beta</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div id="judge0-chat-messages"></div>
-        <div id="judge0-chat-input-container" class="ui basic segment">
-            <form id="judge0-chat-form" class="ui fluid transparent input">
-                <input id="judge0-chat-user-input" type="text" placeholder="Message AI">
-            </form>
-        </div>
-    </div>
+    <div id="judge0-status-line" class="ui bottom right attached label"></div>
 
-    <div id="judge0-status-line" class="ui bottom right attached small label"></div>
-
-    <a href="https://judge0.com" target="_blank" class="ui bottom left attached small label judge0-default-visible">
-        © 2016-2025 Judge0 d.o.o. – All Rights Reserved.
-    </a>
-
+    <!-- <i class="copyright outline icon"></i>2016-2025 Judge0 d.o.o. – All Rights Reserved. -->
     <script>
         if ("serviceWorker" in navigator) {
             navigator.serviceWorker.register("sw.js").then(() => console.log("Service Worker Registered"));
