--- a/index.html
+++ b/index.html
@@ -177,28 +177,26 @@
         </div>
     </div>
 
-    <div id="judge0-chat-container" class="ui segment">
-        <div class="ui top attached borderless mini menu">
-            <div class="right menu">
-                <div class="fitted item">
-                    <select id="judge0-chat-model-select" class="ui search selection dropdown item">
-                        <option>gpt-4o-mini</option>
-                        <option>gpt-4o</option>
-                        <option>o3-mini</option>
-                        <option>o1-mini</option>
-                        <option>claude-3-5-sonnet</option>
-                        <option>deepseek-chat</option>
-                        <option>deepseek-reasoner</option>
-                        <option>meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo</option>
-                        <option>meta-llama/Meta-Llama-3.1-70B-Instruct-Turbo</option>
-                        <option>meta-llama/Meta-Llama-3.1-405B-Instruct-Turbo</option>
-                        <option>mistral-large-latest</option>
-                        <option>pixtral-large-latest</option>
-                        <option>codestral-latest</option>
-                        <option>google/gemma-2-27b-it</option>
-                        <option>grok-beta</option>
-                    </select>
-                </div>
+    <div id="judge0-chat-container" class="ui basic segment">
+        <div class="ui menu">
+            <div class="item">
+                <select id="judge0-chat-model-select" class="ui dropdown">
+                    <option>gpt-4o</option>
+                    <option>gpt-4o-mini</option>
+                    <option>o3-mini</option>
+                    <option>o1-mini</option>
+                    <option>claude-3-5-sonnet</option>
+                    <option>deepseek-chat</option>
+                    <option>deepseek-reasoner</option>
+                    <option>meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo</option>
+                    <option>meta-llama/Meta-Llama-3.1-70B-Instruct-Turbo</option>
+                    <option>meta-llama/Meta-Llama-3.1-405B-Instruct-Turbo</option>
+                    <option>mistral-large-latest</option>
+                    <option>pixtral-large-latest</option>
+                    <option>codestral-latest</option>
+                    <option>google/gemma-2-27b-it</option>
+                    <option>grok-beta</option>
+                </select>
             </div>
         </div>
         <div id="judge0-chat-messages"></div>
